@@ -5,26 +5,28 @@ DIST grsecurity-sources-extras-4.9.44.tar.xz 2643884 SHA256 2c8ea5db8c7b0686189f
 DIST grsecurity-sources-extras-4.9.48.tar.xz 2542704 SHA256 549446a91147d676debb576a8963ab54fe27d5358b7300e89c0dda5fcd3933f1 SHA512 91b92d457236b82166d0073db8d9807d76607f997067380e2453319de91666aee72570130c682a8ab0f32a320c1f070816583d1f3e296be9147c00794bceedcc WHIRLPOOL 88299efbe138e59d6fd0c20dd4b9288759247e0801de7a675eb4194a11853617146b395133c9a0e49b116af63f56abcf8871cdf73d01d127353d206fff551b8a
 DIST grsecurity-sources-extras-4.9.49.tar.xz 2549128 SHA256 638243a89873b9152780f5d91c6912c6f69e9c4725dd9ac65d6c4c69b63f2877 SHA512 c89bd0a2ae3fbdf066beff9b11ee69486c1f8bcf062b615478d019797ad1aa0199bec1455b689d4852b13d0ec36a19363fa0f1d307a9f2309ddb6b420951f805 WHIRLPOOL 2e5e1e615cdea48fca80f50717a537e457b859781229a4494971110fdf500e1860ca3f82f802e8623f4c8e6f2ff715a682d4bacb95f24dd587c5d8d2a057d26b
 DIST grsecurity-sources-extras-4.9.50.tar.xz 2554316 SHA256 6ea9deae6705f6ba6349a28be3c2477f9f1d490bdfa4f6952f05793a55d172fa SHA512 8e92c7a444abcd4dd14659e3f2dbf864d2dd9a02aa90fd2ccc0bcdfafa9c38a1a66e200c23e7639ec55b295854c683f075655833c83068e03f0f5e88aa70d56e WHIRLPOOL d5d1a99353c09fc1d9497863a568e85defc165cf03f0b4e5829ca190ab84dfeb1b54ea9bb1b722c0f6daa79980b14b4a4c81a623a62d860920df93935ad7986b
+DIST grsecurity-sources-extras-4.9.51.tar.xz 2581044 SHA256 921c41a8577585b21baa3ec5417762c8a211adfc9fe6fa3ac44ce61a0cf55c21 SHA512 a449ca01079f64588ffb7ab2a0880839e8b2165bb8360c4e07ed5985ba2dd5eac5db5a7f6c8bae0e88771a4fc248f11289a4376f32c6420198d9209838d3d13c WHIRLPOOL befab3d1aa291d7244845114d893093f41a15d69586f96af25ffd0812ea9d4109e49c0b3ae8f2f036a452e008a79fa9f6874cbe7192223b9895ff4f840a71295
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.49.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.50.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 946 SHA256 d8f32c06fbdcbe8cdeffcc8100eb913cb302aed1602947e2fc53fab1ab002fbd SHA512 14ced2e474f28d5053db67d19a9a7a55a14e8cacb7dba3e72c714d9c6bc4d0e8dd5e854c1e56bcd1fceeefe91cd51920236500466650e9e76a0d9f8af2686421 WHIRLPOOL 39c9bf829a803424242414d0aa4379bb37dd799e82538a878ad977282295e39876a3ad7dfdc8b4f3bc57b8e10b8e229aef0ca3969c91045384b74b5619b51e0e
+EBUILD grsecurity-sources-4.9.51.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 1141 SHA256 300bbfc408a8f305bebef9b7648f65353c9bca1b62219bdc2d654f39d4ca48b6 SHA512 92e7b9f94cdd9ad417c50e24086fc3eee7321f9ac453022fefab00c7aaa8010422765517aec0a1edda225459f620bdde794d055ac7749ab19ef9a42fcd6aebfb WHIRLPOOL 1562ab2c9a4c34a5bd5bde29ecefb8fa07eb2e942aa9ddf55a81f462e737626994196106c8855f0bf5f2bb8b951545871af4125fbfda550b40792e3dd6ca6145
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlm89DkACgkQunvTUHGU
-RZ/BWhAAyJUBoyEH4Ws4tzikd1ARR6CEIsw21wrEsD65u0NG3pzFZmWgVGYXKLf5
-syN6bPi+oAoaPwDgnnm0ZKhAX7Mnfo2Sr+5HwI9t7NsQvHXfxaDpPKGYcEOJ+yh1
-wYH4dWwXXJxUKHjiHAdDKk+kgA9O12LjK6Dt0UgHv/YgKCe59E6OwOzg5NiF93Fo
-+USDK0bu9Aw6JIyhHOd0CagGsrRhtI6b3iXILbRhO+rhXFOklNXlrS2G/emY4ZYq
-/ManxMNYqOf9M9sPu456fgIJXfmWGdAjYQfFAeVx6grdQR5tX7jpxYviz1nRZziQ
-6fFz4C7RNs7JHM3/0OUDceNxwSaT0SGDKKHuhtN8CmT0Di2FqglCWBKxKDdU/qZD
-hqeNTJIAEBnGPAL5mIeSql106kQNitibkD+I38Htf8UlZZ7avJJtaaZiMAowp9PH
-Nm4VK0H5S/zNNiQicEGebcuEVZpmOWKwolc4k3C29tQbfdpFQWDe59a7vtOp0Jxw
-RGEv90hJwe3Xz5hgwjLGURI1sUcOUYDVterw8878+B5JSGmlf0ZUVWtbE5TIxnX8
-j1BE/sGrXic35HuxPgQ0WhNOXOPfLa4f7Ugm6IxGJDZYY3qPm7JxWudsQW2SYcke
-/YiErejpZPW6YBG/nAJqlIBvkwdInt6psRhbVWrtDIczSL+ux6g=
-=CJ/X
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlnDj+YACgkQunvTUHGU
+RZ/XUQ/+Mo7e1J5m0htG4vRJiKDOHMCFINQuus9wwB0C/3fwPtn8Ai9aVzft9Fd5
++ArhIlSxLniVRaQS1m3dVr+6iB9jw9/kH1MD0hLhDdhBraKptDxNgzXTmD7tZtX4
+qac3CyGnsY+MotDAOcrdHhyI9JWXZTgA2gWqTBAIYHKqZvu+ulLP5xxychtkZVwc
+ZRW8m4vRjQPzvBL6+QIEb2nLxpEzJ3rNrK+FqWAP76D0Ozr5d1vdTFGT1sv5mfZ+
+fsTUmM2nKlzh1Y8bYradx19zTAsaBbuU/b34jHNDJ4O/AvHuDnITvniuO8MTYLj6
+MIGUA1/KpAHd9f1hBYT6bwa/Sf3oG1tr1U8RehSm0FOKU1MQCQtWFPQjUoyOkV/2
+uGDiXvhjxWfRvIqlezITHyTIeZpGoZ8wyX7SKnwwiYWTwZxXTMpZK1zHuKdcOCu0
+m13f7cKHL9mbKauEykf5nLdGUUTuFN0EQ6g5JsOYUhqFCFh2JDJh1fSUpLgoQzGa
+oOJZB5rWlfmqJVQaJ6Ptb7+WKwIromapiHJcrFBrfwv8iFD67IESSyUB+gp2ZGJ6
+VVkTYMajr5xncRHEhf/n5Y5XO8vIfAN7aSFNs1I5VMIbGkm55d/O9fpEu+s+hAIl
+x43C8bfXVFTdJnqWNcYCHfDiL9Nu24dEpaHoE3vPZVpRPe6goUk=
+=WmY6
 -----END PGP SIGNATURE-----
